feat[query]: query params added

--- a/index.html
+++ b/index.html
@@ -6,11 +6,11 @@
     <link href="./output.css" rel="stylesheet">
     <title>Website Checker</title>
 </head>
-<body>
-    <form method="POST" class="flex flex-col items-center justify-content">
+<body class="bg-blue-400">
+    <form method="POST" class="flex flex-col items-center mt-10 justify-content">
         
-        <input name="website" type="text" placeholder="Enter or Paste your website URL">
-        <button type="submit">Check</button>
+        <input name="website" type="text" placeholder="Enter or Paste your website URL" class="px-5 py-5 rounded-lg">
+        <button type="submit" class="px-10 py-2 mt-5 bg-yellow-400 rounded-md">Check</button>
     </form>
 </body>
 </html>
